# overcooked-custom

./: .gitignore  pyproject.toml  uv-template.code-workspace
.devcontainer/: devcontainer.json
config/: eval_step1.yaml  eval_step2.yaml  interactive.yaml  ippo_rnn.yaml  ippo_step1.yaml  ippo_step2.yaml
config/env/: default.yaml  step1.yaml  step2.yaml
config/env/menu/: default.yaml  step1.yaml  step2.yaml
config/env/parameter/: default.yaml  one_agent.yaml  step1.yaml  step2.yaml
config/env/reward/: clean.yaml  default.yaml  eval.yaml
config/env/schedule/: default.yaml  step1.yaml  step2.yaml
config/layout/: layouts.yaml
config/option/: default.yaml
config/train/: ippo_rnn.yaml
config/ui/: default.yaml
src/: interactive.py  ippo_rnn.py
src/environment/: actions.py  agent.py  customer.py  dynamic_object.py  interaction.py  layouts.py  menus.py  observation.py  overcooked.py  pick_place.py  process.py  reset_env.py  reward.py  state.py  static_object.py  update_env.py
src/operation/: agent_controller.py  controller.py  controller_factory.py  ippo_model_controller.py  keyboard_input.py  random_input.py  replay_log.py
src/utils/: schema.py
src/visualize/: grid_rendering_v2.py  visualizer.py  window.py
